--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,9 @@
 {
- "display": "fullscreen",
  "background_color": "#FFFFFF",
+ "display": "fullscreen",
+ "start_url": "index.htm",
+ "name": "MY WORLD STORE",
+ "theme_color": "#FFFFFF",
  "icons": [
   {
    "src": "misc/icon150.png",
@@ -38,8 +41,5 @@
    "sizes": "64x64"
   }
  ],
- "description": "MY Virtual Store Community แห่งใหม่ ของสายสร้างสรรค์ มาร่วมคอนเนคไอเดีย ไปด้วยกัน พร้อมกิจกรรมสนุกๆ รับสิทธิพิเศษมากมาย Always Connected มายคอนเนคได้ทุกไอเดีย",
- "name": "MY WORLD STORE",
- "start_url": "index.htm",
- "theme_color": "#FFFFFF"
+ "description": "MY Virtual Store Community แห่งใหม่ ของสายสร้างสรรค์ มาร่วมคอนเนคไอเดีย ไปด้วยกัน พร้อมกิจกรรมสนุกๆ รับสิทธิพิเศษมากมาย Always Connected มายคอนเนคได้ทุกไอเดีย"
 }
