--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
   "name": "Virtual Tour",
-  "short_name": "Tour",
-  "display": "fullscreen",
-  "display_override": ["fullscreen", "standalone"],
+  "short_name": "Virtual Tour",
+  "description": "Virtual Tour",
   "start_url": "./index.htm",
+  "display": "standalone",
   "orientation": "landscape",
-  "background_color": "#000000",
-  "theme_color": "#FFFFFF"
+  "theme_color": "#FFFFFF",
+  "background_color": "#FFFFFF"
 }
